
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;






typedef scalar_t__ PFNGLCLAMPCOLORARBPROC ;
typedef scalar_t__ (* GLADloadproc ) (char*) ;


 int GLAD_GL_ARB_color_buffer_float ;
 scalar_t__ glad_glClampColorARB ;

__attribute__((used)) static void load_GL_ARB_color_buffer_float(GLADloadproc load) {
 if(!GLAD_GL_ARB_color_buffer_float) return;
 glad_glClampColorARB = (PFNGLCLAMPCOLORARBPROC)load("glClampColorARB");
}
